--- a/ingest.ipynb
+++ b/ingest.ipynb
@@ -61,6 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "3d975974",
    "metadata": {
     "cellUniqueIdByVincent": "6b0f2"
    },
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "830a5100",
    "metadata": {
     "cellUniqueIdByVincent": "f3772"
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1f57b7a1",
    "metadata": {
     "cellUniqueIdByVincent": "dbeb2"
@@ -106,44 +107,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-06 19:45:38,449 INFO sqlalchemy.engine.Engine select pg_catalog.version()\n",
-      "2025-12-06 19:45:38,450 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2025-12-06 19:45:38,455 INFO sqlalchemy.engine.Engine select current_schema()\n",
-      "2025-12-06 19:45:38,456 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2025-12-06 19:45:38,467 INFO sqlalchemy.engine.Engine show standard_conforming_strings\n",
-      "2025-12-06 19:45:38,468 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2025-12-06 19:45:38,484 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2025-12-06 19:45:38,490 INFO sqlalchemy.engine.Engine SELECT pg_catalog.pg_class.relname \n",
+      "2025-12-06 19:58:08,812 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2025-12-06 19:58:08,813 INFO sqlalchemy.engine.Engine SELECT pg_catalog.pg_class.relname \n",
       "FROM pg_catalog.pg_class JOIN pg_catalog.pg_namespace ON pg_catalog.pg_namespace.oid = pg_catalog.pg_class.relnamespace \n",
       "WHERE pg_catalog.pg_class.relname = %(table_name)s::VARCHAR AND pg_catalog.pg_class.relkind = ANY (ARRAY[%(param_1)s::VARCHAR, %(param_2)s::VARCHAR, %(param_3)s::VARCHAR, %(param_4)s::VARCHAR, %(param_5)s::VARCHAR]) AND pg_catalog.pg_table_is_visible(pg_catalog.pg_class.oid) AND pg_catalog.pg_namespace.nspname != %(nspname_1)s::VARCHAR\n",
-      "2025-12-06 19:45:38,492 INFO sqlalchemy.engine.Engine [generated in 0.00229s] {'table_name': 'products', 'param_1': 'r', 'param_2': 'p', 'param_3': 'f', 'param_4': 'v', 'param_5': 'm', 'nspname_1': 'pg_catalog'}\n",
-      "2025-12-06 19:45:38,501 INFO sqlalchemy.engine.Engine SELECT pg_catalog.pg_class.relname \n",
+      "2025-12-06 19:58:08,814 INFO sqlalchemy.engine.Engine [cached since 750.3s ago] {'table_name': 'products', 'param_1': 'r', 'param_2': 'p', 'param_3': 'f', 'param_4': 'v', 'param_5': 'm', 'nspname_1': 'pg_catalog'}\n",
+      "2025-12-06 19:58:08,820 INFO sqlalchemy.engine.Engine SELECT pg_catalog.pg_class.relname \n",
       "FROM pg_catalog.pg_class JOIN pg_catalog.pg_namespace ON pg_catalog.pg_namespace.oid = pg_catalog.pg_class.relnamespace \n",
       "WHERE pg_catalog.pg_class.relname = %(table_name)s::VARCHAR AND pg_catalog.pg_class.relkind = ANY (ARRAY[%(param_1)s::VARCHAR, %(param_2)s::VARCHAR, %(param_3)s::VARCHAR, %(param_4)s::VARCHAR, %(param_5)s::VARCHAR]) AND pg_catalog.pg_table_is_visible(pg_catalog.pg_class.oid) AND pg_catalog.pg_namespace.nspname != %(nspname_1)s::VARCHAR\n",
-      "2025-12-06 19:45:38,502 INFO sqlalchemy.engine.Engine [cached since 0.01158s ago] {'table_name': 'product_types', 'param_1': 'r', 'param_2': 'p', 'param_3': 'f', 'param_4': 'v', 'param_5': 'm', 'nspname_1': 'pg_catalog'}\n",
-      "2025-12-06 19:45:38,507 INFO sqlalchemy.engine.Engine \n",
-      "CREATE TABLE product_types (\n",
-      "\tid VARCHAR(4) NOT NULL, \n",
-      "\tname VARCHAR(100) NOT NULL, \n",
-      "\tPRIMARY KEY (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2025-12-06 19:45:38,509 INFO sqlalchemy.engine.Engine [no key 0.00183s] {}\n",
-      "2025-12-06 19:45:38,566 INFO sqlalchemy.engine.Engine \n",
-      "CREATE TABLE products (\n",
-      "\tid VARCHAR(20) NOT NULL, \n",
-      "\tname VARCHAR(100) NOT NULL, \n",
-      "\tprice INTEGER NOT NULL, \n",
-      "\tquantity INTEGER NOT NULL, \n",
-      "\ttype_id VARCHAR(4) NOT NULL, \n",
-      "\tPRIMARY KEY (id), \n",
-      "\tFOREIGN KEY(type_id) REFERENCES product_types (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2025-12-06 19:45:38,568 INFO sqlalchemy.engine.Engine [no key 0.00205s] {}\n",
-      "2025-12-06 19:45:38,574 INFO sqlalchemy.engine.Engine COMMIT\n"
+      "2025-12-06 19:58:08,821 INFO sqlalchemy.engine.Engine [cached since 750.3s ago] {'table_name': 'product_types', 'param_1': 'r', 'param_2': 'p', 'param_3': 'f', 'param_4': 'v', 'param_5': 'm', 'nspname_1': 'pg_catalog'}\n",
+      "2025-12-06 19:58:08,823 INFO sqlalchemy.engine.Engine COMMIT\n"
      ]
     }
    ],
@@ -160,13 +133,31 @@
    },
    "outputs": [],
    "source": [
-    "product_types_dictionary = {\n",
+    "productype_id_to_name = {\n",
     "    \"FP\" : \"thuc pham\",\n",
     "    \"DR\" : \"do uong\",\n",
     "    \"HG\" : \"do gia dung\",\n",
     "    \"EL\" : \"thiet bi dien tu\",\n",
     "    \"CS\" : \"my pham\"\n",
+    "}\n",
+    "productype_name_to_id = {\n",
+    "    \"thuc pham\" : \"FP\",\n",
+    "    \"do uong\" : \"DR\",\n",
+    "    \"do gia dung\" : \"HG\",\n",
+    "    \"thiet bi dien tu\" : \"EL\",\n",
+    "    \"my pham\" : \"CS\"\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "cellUniqueIdByVincent": "67c5a"
+   },
+   "outputs": [],
+   "source": [
+    "a = ProductType(id=\"FP\",name=\"thuc pham\")"
    ]
   },
   {
