--- a/ingest.ipynb
+++ b/ingest.ipynb
@@ -151,13 +151,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "109b896e",
    "metadata": {
     "cellUniqueIdByVincent": "67c5a"
    },
    "outputs": [],
    "source": [
-    "a = ProductType(id=\"FP\",name=\"thuc pham\")"
+    "a = ProductType(id=\"FP\",name=\"thuc pham\")\n",
+    "insert_one_productType(a)"
    ]
   },
   {
