--- a/ingest.ipynb
+++ b/ingest.ipynb
@@ -2026,6 +2026,243 @@
    "source": [
     "print(complete_prompt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c500352a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = call_llm(complete_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fa5ba8e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```yaml\n",
+      "FP001: FP\n",
+      "FP002: FP\n",
+      "FP003: FP\n",
+      "FP004: FP\n",
+      "FP005: FP\n",
+      "FP006: FP\n",
+      "FP007: FP\n",
+      "FP008: FP\n",
+      "FP009: FP\n",
+      "FP010: FP\n",
+      "FP011: FP\n",
+      "FP012: FP\n",
+      "FP013: FP\n",
+      "FP014: FP\n",
+      "FP015: FP\n",
+      "FP016: FP\n",
+      "FP017: FP\n",
+      "FP018: FP\n",
+      "FP019: FP\n",
+      "FP020: FP\n",
+      "FP021: FP\n",
+      "FP022: FP\n",
+      "FP023: FP\n",
+      "FP024: FP\n",
+      "FP025: FP\n",
+      "FP026: FP\n",
+      "FP027: FP\n",
+      "FP028: FP\n",
+      "FP029: FP\n",
+      "FP030: FP\n",
+      "FP031: FP\n",
+      "FP032: FP\n",
+      "FP033: FP\n",
+      "FP034: FP\n",
+      "FP035: FP\n",
+      "FP036: FP\n",
+      "FP037: FP\n",
+      "FP038: FP\n",
+      "FP039: FP\n",
+      "FP040: FP\n",
+      "DR001: DR\n",
+      "DR002: DR\n",
+      "DR003: DR\n",
+      "DR004: DR\n",
+      "DR005: DR\n",
+      "DR006: DR\n",
+      "DR007: DR\n",
+      "DR008: DR\n",
+      "DR009: DR\n",
+      "DR010: DR\n",
+      "DR011: DR\n",
+      "DR012: DR\n",
+      "DR013: DR\n",
+      "DR014: DR\n",
+      "DR015: DR\n",
+      "DR016: DR\n",
+      "DR017: DR\n",
+      "DR018: DR\n",
+      "DR019: DR\n",
+      "DR020: DR\n",
+      "DR021: DR\n",
+      "DR022: DR\n",
+      "DR023: DR\n",
+      "DR024: DR\n",
+      "DR025: DR\n",
+      "DR026: DR\n",
+      "DR027: DR\n",
+      "DR028: DR\n",
+      "DR029: DR\n",
+      "DR030: DR\n",
+      "DR031: DR\n",
+      "DR032: DR\n",
+      "DR033: DR\n",
+      "DR034: DR\n",
+      "DR035: DR\n",
+      "DR036: DR\n",
+      "DR037: DR\n",
+      "DR038: DR\n",
+      "DR039: DR\n",
+      "DR040: DR\n",
+      "HG001: HG\n",
+      "HG002: HG\n",
+      "HG003: HG\n",
+      "HG004: HG\n",
+      "HG005: HG\n",
+      "HG006: HG\n",
+      "HG007: HG\n",
+      "HG008: HG\n",
+      "HG009: HG\n",
+      "HG010: HG\n",
+      "HG011: HG\n",
+      "HG012: HG\n",
+      "HG013: HG\n",
+      "HG014: HG\n",
+      "HG015: HG\n",
+      "HG016: HG\n",
+      "HG017: HG\n",
+      "HG018: HG\n",
+      "HG019: HG\n",
+      "HG020: HG\n",
+      "HG021: HG\n",
+      "HG022: HG\n",
+      "HG023: HG\n",
+      "HG024: HG\n",
+      "HG025: HG\n",
+      "HG026: HG\n",
+      "HG027: HG\n",
+      "HG028: HG\n",
+      "HG029: HG\n",
+      "HG030: HG\n",
+      "HG031: HG\n",
+      "HG032: HG\n",
+      "HG033: HG\n",
+      "HG034: HG\n",
+      "HG035: HG\n",
+      "HG036: HG\n",
+      "HG037: HG\n",
+      "HG038: HG\n",
+      "HG039: HG\n",
+      "HG040: HG\n",
+      "EL001: EL\n",
+      "EL002: EL\n",
+      "EL003: EL\n",
+      "EL004: EL\n",
+      "EL005: EL\n",
+      "EL006: EL\n",
+      "EL007: EL\n",
+      "EL008: EL\n",
+      "EL009: EL\n",
+      "EL010: EL\n",
+      "EL011: EL\n",
+      "EL012: EL\n",
+      "EL013: EL\n",
+      "EL014: EL\n",
+      "EL015: EL\n",
+      "EL016: EL\n",
+      "EL017: EL\n",
+      "EL018: EL\n",
+      "EL019: EL\n",
+      "EL020: EL\n",
+      "EL021: EL\n",
+      "EL022: EL\n",
+      "EL023: EL\n",
+      "EL024: EL\n",
+      "EL025: EL\n",
+      "EL026: EL\n",
+      "EL027: EL\n",
+      "EL028: EL\n",
+      "EL029: EL\n",
+      "EL030: EL\n",
+      "EL031: EL\n",
+      "EL032: EL\n",
+      "EL033: EL\n",
+      "EL034: EL\n",
+      "EL035: EL\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c6cee5cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "from yaml import safe_load\n",
+    "product_id_to_type_id = safe_load(result.split(\"```yaml\")[1].split(\"```\")[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "83b76888",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Product(id='FP001') ,  name='Gao thom ST25', price='18000', quantity='120', type_id='FP')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Product(id = clean_data[0].get(\"product_id\"), \n",
+    "        name = clean_data[0].get(\"name\"),\n",
+    "        price = clean_data[0].get(\"price\"),\n",
+    "        quantity = clean_data[0].get(\"quantity\"),\n",
+    "        type_id = product_id_to_type_id.get(clean_data[0].get(\"product_id\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3c78e95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lists_product = []\n",
+    "for item in clean_data:\n",
+    "    lists_product.append(Product(id = item.get(\"product_id\"), \n",
+    "        name = item.get(\"name\"),\n",
+    "        price = item.get(\"price\"),\n",
+    "        quantity = item.get(\"quantity\"),\n",
+    "        type_id = product_id_to_type_id.get(item.get(\"product_id\"))))"
+   ]
   }
  ],
  "metadata": {
